Fix quick search icon vertical align issue

--- a/web/pgadmin/browser/static/scss/_quick_search.scss
+++ b/web/pgadmin/browser/static/scss/_quick_search.scss
@@ -110,12 +110,11 @@
 .search-icon{
   background: $loader-icon-small center center no-repeat;
   margin: auto !important;
-  height: 22px !important;
   width: 130px !important;
   background-position: left !important;
   font-size: 14px;
   color: $dropdown-link-color;
-  padding-left: 30px;
+  padding-left: 26px;
 }
 
 .help_loading_icon{
